@@ -1,76 +1,0 @@
-enum {
-	C_SCROLL = 0,
-	C_BANG,
-	C_HASH,
-	C_SUBAGAIN,
-	C_STAR,
-	C_SHIFTL,
-	C_EQUAL,
-	C_SHIFTR,
-	C_AT,
-	C_APPEND,
-	C_ABBR,
-	C_ARGS,
-	C_BG,
-	C_CHANGE,
-	C_CD,
-	C_CHDIR,
-	C_COPY,
-	C_DELETE,
-	C_DISPLAY,
-	C_EDIT,
-	C_EX,
-	C_EXUSAGE,
-	C_FILE,
-	C_FG,
-	C_GLOBAL,
-	C_HELP,
-	C_INSERT,
-	C_JOIN,
-	C_K,
-	C_LIST,
-	C_MOVE,
-	C_MARK,
-	C_MAP,
-	C_MKEXRC,
-	C_NEXT,
-	C_NUMBER,
-	C_OPEN,
-	C_PRINT,
-	C_PRESERVE,
-	C_PREVIOUS,
-	C_PUT,
-	C_QUIT,
-	C_READ,
-	C_RECOVER,
-	C_RESIZE,
-	C_REWIND,
-	C_SUBSTITUTE,
-	C_SCRIPT,
-	C_SET,
-	C_SHELL,
-	C_SOURCE,
-	C_STOP,
-	C_SUSPEND,
-	C_T,
-	C_TAG,
-	C_TAGNEXT,
-	C_TAGPOP,
-	C_TAGPREV,
-	C_TAGTOP,
-	C_UNDO,
-	C_UNABBREVIATE,
-	C_UNMAP,
-	C_V,
-	C_VERSION,
-	C_VISUAL_EX,
-	C_VISUAL_VI,
-	C_VIUSAGE,
-	C_WRITE,
-	C_WN,
-	C_WQ,
-	C_XIT,
-	C_YANK,
-	C_Z,
-	C_SUBTILDE
-};
